--- a/package.json
+++ b/package.json
@@ -1,15 +1,8 @@
-{
-  "name": "three-demo",
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+import { defineConfig } from 'vite';
+
+export default defineConfig({
+  root: './',  // Set the root directory (defaults to project root)
+  build: {
+    outDir: 'dist',  // Output directory for the build
   },
-  "devDependencies": {
-    "vite": "^4.0.0"
-  },
-  "dependencies": {
-    "three": "^0.155.0"
-  }
-}
+});
