--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
-import { defineConfig } from 'vite';
-
-export default defineConfig({
-  root: './',  // Set the root directory (defaults to project root)
-  build: {
-    outDir: 'dist',  // Output directory for the build
+{
+  "name": "three-demo",
+  "version": "0.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
-});
+  "devDependencies": {
+    "vite": "^2.3.0"
+  },
+  "dependencies": {
+    "three": "^0.128.0"
+  }
+}
